--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,20 @@
 /* Created by: Andre Deveau
-* Created on: Sep 2022
-*This CSS file defines for index.html ICS20-Unit1-04-HTML-CSS
+ * Created on: Sep 2022
+ * This CSS file defines the style for index.html ICS2O-Unit1-04-CSS
 */
 
 body {
-  background-color: indigo
+  background-color: seagreen;
 }
 
 h1 {
-  background-color: rgb(255 127 80)
-  color: hsl(147deg 50% 47%);
+  background-color: rgb(74 176 123);
+  color: hsl(0deg 0% 0%);
   padding: 40px;
   text-align: center;
 }
 
 p {
-  background-color: lime
+  background-color: #0ff;
+  font-size: 20px;
 }
